Test edge cases DestinationSortingServiceTest DestinationPersistenceServiceTest